--- a/app/src/main/res/layout/activity_open_list.xml
+++ b/app/src/main/res/layout/activity_open_list.xml
@@ -4,31 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OpenList">
+    tools:context=".OpenList"
+    android:background="@color/white">
+
     <ImageView
         android:id="@+id/hinh1"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:padding="10dp"
-        />
-    <TextView
-        android:layout_toRightOf="@+id/hinh1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tên"
-        android:id="@+id/ten1"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:layout_marginTop="10dp"
-        />
+        android:layout_marginTop="250dp"/>
 
     <TextView
-        android:textSize="22sp"
+        android:id="@+id/ten1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
         android:layout_marginTop="10dp"
+        android:layout_toRightOf="@+id/hinh1"
+        android:text="Tên"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:paddingTop="250dp"/>
+
+    <TextView
+        android:id="@+id/ten2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/ten1"
-        android:id="@+id/ten2"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="10dp"
+        android:layout_toRightOf="@id/hinh1"
         android:text="Mô tả"
-        android:layout_toRightOf="@id/hinh1"/>
+        android:textColor="@color/black"
+        android:textSize="22sp" />
+
 </RelativeLayout>
