--- a/app/src/main/res/layout/book.xml
+++ b/app/src/main/res/layout/book.xml
@@ -17,6 +17,7 @@
         android:text="Tên"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
 
         />
     <TextView
@@ -28,6 +29,7 @@
         android:id="@+id/textViewMota"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
 
         />
 </RelativeLayout>
