--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ListFragment">
+    tools:context=".ListFragment"
+    android:background="@color/graylight">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
@@ -17,7 +18,9 @@
         android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/black"
+        />
     <ListView
         android:paddingTop="60dp"
         android:id="@+id/listViewBook"
