--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,6 +61,16 @@
         android:textColorHint="#99FFFFFF"
         android:drawableLeft="@drawable/ic_baseline_lock_open_24"
         />
+    <CheckBox
+
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ghi nhớ đăng nhập"
+        android:textSize="20dp"
+        android:layout_below="@id/password"
+        android:layout_marginStart="50dp"
+        android:textColor="@color/primeblue"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/loginbtn"
@@ -69,16 +79,18 @@
         android:layout_below="@id/password"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/round2"
         android:text="Hoàn thành"
         android:textColor="@color/white" />
+
     <TextView
+        android:id="@+id/signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/signup"
+
         android:layout_below="@id/loginbtn"
         android:text="Đăng ký tài khoản"
         android:textSize="19dp"
@@ -98,6 +110,7 @@
         android:textSize="20dp"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
+
         />
 
 
